# edgewalker

./: .banditrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cli-demo.tape  demo.tape  pyproject.toml  tui-history.tape
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: 1-bug-report.yaml  2-feature-request.yaml  3-docs-bug.yaml
.github/workflows/: ci.yml  commit-lint.yml  pre-commit.yml  release.yml  stale.yml  vhs.yml
docs/: configuration.md  data-privacy.md  installation.md  risk-scoring.md
docs/contributing/: building-and-testing-edgewalker.md  commit-message-guidelines.md
docs/modules/: cve-scan.md  mac-lookup.md  password-scan.md  port-scan.md
docs/redesign/: IMPLEMENTATION_PLAN.md  tui-redesign-mockup.html
docs/telemetry_samples/: cve_scan_example.json  cve_scan_schema.json  password_scan_example.json  password_scan_schema.json  port_scan_example.json  port_scan_schema.json  sql_scan_example.json  sql_scan_schema.json  web_scan_example.json  web_scan_schema.json
scripts/: generate_telemetry_docs.py  install.sh  seed_demo_history.py  setup_nmap_caps.sh  uninstall.sh
src/edgewalker/: __init__.py  __main__.py  display.py  main.py  theme.py  utils.py
src/edgewalker/cli/: __init__.py  cli.py  controller.py  guided.py  history.py  menu.py  results.py
src/edgewalker/core/: __init__.py  config.py  constants.py  demo_service.py  diff.py  engine.py  findings.py  logger_config.py  models.py  result_store.py  risk.py  scanner_service.py  sqlite_store.py  telemetry.py  theme_manager.py  visuals.py
src/edgewalker/data/: creds.csv  remediation.yaml
src/edgewalker/modules/: __init__.py
src/edgewalker/modules/cve_scan/: __init__.py  cache.py  models.py  scanner.py
src/edgewalker/modules/discovery/: __init__.py  http.py  mdns.py  upnp.py
src/edgewalker/modules/mac_lookup/: __init__.py  scanner.py
src/edgewalker/modules/password_scan/: __init__.py  models.py  scanner.py
src/edgewalker/modules/port_scan/: __init__.py  models.py  scanner.py
src/edgewalker/modules/sql_scan/: __init__.py  models.py  scanner.py
src/edgewalker/modules/web_scan/: __init__.py  models.py  scanner.py
src/edgewalker/skins/: catppuccin-mocha.yaml  colorblind.yaml  dracula.yaml  gruvbox.yaml  periphery.yaml  solarized.yaml  tokyo_night.yaml
src/edgewalker/tui/: __init__.py  app.py
src/edgewalker/tui/css/: edgewalker.tcss
test-target/: Dockerfile  README.md  docker-compose.yml  nginx.conf  smb.conf  start.sh  vsftpd.conf
tests/: conftest.py  test_app_tui.py  test_app_tui_extra.py  test_cli.py  test_cli_commands.py  test_cli_controller.py  test_cli_controller_extra.py  test_cli_coverage.py  test_cli_extra.py  test_cli_guided.py  test_cli_history.py  test_cli_init_extra.py  test_cli_menu.py  test_cli_results.py  test_cli_results_extra.py  test_config.py  test_config_coverage.py  test_config_extra.py  test_config_screen.py  test_core_models.py  test_coverage_boost.py  test_cve_cache.py  test_cve_scan.py  test_cve_scan_extra.py  test_cve_scan_models.py  test_dashboard_coverage.py  test_dashboard_screen.py  test_dashboard_screen_extra.py  test_demo_service.py  test_diff.py  test_display.py  test_display_coverage.py  test_display_extra.py  test_dunder_main.py  test_engine.py  test_enhanced_discovery.py  test_enhanced_discovery_coverage.py  test_findings.py  test_guided_screen.py  test_help_modal.py  (+51 more)
(+15 files in other folders)
